# droomzaak

./: .env.demo.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .semgrepignore  CLAUDE.md  README.md  TEAM-SETUP.md  droomzaak-data-shortlist.md  droomzaak-prd.md  pyproject.toml
.claude/: settings.json  settings.local.json.example
.claude/agents/: agent-tool-builder.md  code-reviewer.md  code-simplifier.md  demo-readiness-reviewer.md  maplibre-canvas-builder.md  media-prompt-smith.md  open-data-ingest-specialist.md  python-data-engineer.md  reference-scout.md  security-reviewer.md  spec-critic.md  warehouse-schema-expert.md
.claude/commands/: bootstrap.md  demo-check.md  handover.md  new-tool.md  retro.md  ship.md  spec.md
.claude/hooks/: security-gate.sh
.claude/rules/: data-tiers.md  git-operations.md
.claude/skills/add-agent-tool/: SKILL.md
.claude/skills/belgian-open-data-ingest/: SKILL.md
.claude/skills/browser-data-curation/: SKILL.md
.claude/skills/chapter-state-machine/: SKILL.md
.claude/skills/data-tool/: SKILL.md
.claude/skills/dream-narrative-style/: SKILL.md
backend/app/: agent_anthropic.py  agent_loop.py  agent_openai.py  agent_tools.py  agent_trace.py  agent_validation.py  data_gateway.py  droomzaak_chapters.py  droomzaak_fabricate.py  droomzaak_prompt.py  droomzaak_tools.py  droomzaak_validation.py  main.py  package_view.py  pdf_render.py  settings.py  storage.py  warehouse_catalog.py
backend/templates/: pakket.html
backend/tests/: test_agent_trace.py  test_clip_points_to_area.py  test_droomzaak.py  test_isochrone_tool.py  test_package_renderer.py
config/: permit_rules_horeca.yml  subsidies.yml
docs/handovers/: INDEX.md
docs/specs/: 2026-05-30-dream-landing-design.md  2026-05-30-permit-rules-curated-config-design.md  2026-05-30-permit-rules-plan.md  2026-05-30-phased-journey-and-embedding-router.md  2026-05-30-same-turn-chapter-transition-continuation.md  generic-warehouse-exploration.md  package-renderer.md
docs/testing/: tool-test-prompts.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: gent-sectors.geojson
frontend/src/: App.tsx  index.css
frontend/src/droomzaak/: api.ts  (+2 more)
pipelines/droomzaak/: README.md  _common.py  build.py  joins.md  load_to_supabase.py
pitch/: droomzaak-grounding-storyline.md  droomzaak-lore-reference.md  droomzaak-pitch-video-checklist.md  droomzaak-shotlist-worksheet.md  droomzaak-vo-script.md
reference/: README.md
scripts/: build_sector_geojson.py  seed_demo.py  smoke_tools.py
supabase/: QUICK_REFERENCE.md  README.md  schema.sql
supabase/migrations/: 0001_droomzaak_demo.sql  20260530143210_droomzaak_canonical_tables.sql  20260530154400_add_footfall_demand_tables.sql  20260530160000_add_permit_rules_table.sql
(+55 files in other folders)
