[project]
name = "droomzaak"
version = "0.1.0"
description = "Droomzaak — a five-chapter, map-anchored founder journey for Ghent."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "duckdb>=1.1",
    "asyncpg>=0.30",
    "anthropic>=0.39",
    "openai>=1.54",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
