[project]
name = "droomzaak"
version = "0.1.0"
description = "Droomzaak — a five-chapter, map-anchored founder journey for Ghent (app + Belgian open-data pipeline)."
requires-python = ">=3.13"
dependencies = [
    # data pipeline: clean (DuckDB) + load (DuckDB postgres extension)
    "duckdb==1.4.3",
    "pyproj==3.7.2",
    "shapely==2.1.2",
    "pandas[parquet]>=3.0.3",
    "loguru>=0.7.3",
    "python-dotenv==1.2.2",
    "pyyaml>=6.0.3",
    # app runtime (FastAPI + provider-neutral agent loop)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "jinja2>=3.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0",
    "duckdb>=1.4.3",
    "asyncpg>=0.30",
    "anthropic>=0.39",
    "openai>=1.54",
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
    "ruff>=0.9",
]
# Belgian open-data cleaning → Supabase warehouse (pipelines/droomzaak).
# Heavy geo/data deps kept out of the default app env: install with
# `uv sync --group pipeline`.
pipeline = [
    "pyproj==3.7.2",
    "pandas[parquet]>=3.0.3",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
